feat(search): search API with disjunctive facets and autocomplete
